--- a/signup.html
+++ b/signup.html
@@ -21,41 +21,45 @@
 
   <main>
 
-    <section class="logbox">
+    <section class="Login">
 
-      <form method="login" action="/" id="login-form">
+      <form method="login" id="Login-form">
 
-        <div class="logbox__input-box">
+        <div class="Login__input-box">
           <label class="user">이메일</label>
-          <input type="email" name="userEmail" class="logbox__input-box-txt" placeholder="이메일을 입력해주세요">
+          <input type="email" name="userEmail" class="Login__input-field" placeholder="이메일을 입력해주세요">
+          <div class="email-error error-message"></div>
         </div>
 
-        <div class="logbox__input-box">
+        <div class="Login__input-box">
           <label class="user" for="nickname">닉네임</label>
-          <input type="text" name="nickname" class="logbox__input-box-txt" placeholder="닉네임을 입력해주세요">
+          <input type="text" name="nickname" class="Login__input-field" placeholder="닉네임을 입력해주세요">
+          <div class="nickname-error error-message"></div>
         </div>
 
-        <div class="logbox__input-box password-input">
+        <div class="Login__input-box password-input">
           <label class="user">비밀번호</label>
           <div class="password-wrapper">
-            <input type="password" name="password" class="logbox__input-box-txt" placeholder="비밀번호를 입력해주세요">
+            <input type="password" name="password" class="Login__input-field" placeholder="비밀번호를 입력해주세요">
+            <div class="password-error error-message"></div>
             <div class="password-wrapper__toggle">
-              <img src="images/home/눈.png" id="passwordToggle">
+              <img src="images/home/눈.png" id="passwordToggle1">
             </div>
           </div>
         </div>
 
-        <div class="logbox__input-box password-input">
+        <div class="Login__input-box password-input">
           <label class="user">비밀번호 확인</label>
           <div class="password-wrapper">
-            <input type="password" name="confirmPassword" class="logbox__input-box-txt" placeholder="비밀번호를 다시 한 번 입력해주세요">
+            <input type="password" name="confirmPassword" class="Login__input-field" placeholder="비밀번호를 다시 한 번 입력해주세요">
+            <div class="confirmPassword-error error-message"></div>
             <div class="password-wrapper__toggle">
-              <img src="images/home/눈.png" id="passwordToggle">
+              <img src="images/home/눈.png" id="passwordToggle2">
             </div>
           </div>
         </div>
 
-        <button type="submit" class="logbox__submit">회원가입</button>
+        <button type="submit" class="Login__submit">회원가입</button>
 
         <div class="social-login">
           <p class="social-login__txt">간편 로그인하기</p>
